--- a/Factory/wwwroot/styles.css
+++ b/Factory/wwwroot/styles.css
@@ -1,9 +1,22 @@
-div#footer {
-  position: fixed;
-  bottom: 0px;
-  left: 0px;
+body {
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: proxima-nova, sans-serif;
+  color: white;
+  margin-bottom: 20px;
+  background-color: rgba(23, 29, 60, 0.823);
+}
+
+#links {
+  display: flex;
+  font-size: 14px;
   width: 100%;
-  color: #ccc;
-  background: #333;
-  padding: 8px;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px;
+  background-color: rgba(33, 63, 139, 0.865);
 }
