--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -15,12 +15,12 @@
 }
 else
 {
-  <h4>This eningeer works on the following machines:</h4>
+  <h4>This engineer works on the following machines:</h4>
   <ul>
     @foreach(EngineerMachine join in Model.JoinEntities)
     {
       <li>Machine: @join.Machine.Title</li>
-      @using (Html.BeginForm("DeleteJoin", "Items"))
+      @using (Html.BeginForm("DeleteJoin", "Eningeers"))
       {
         @Html.Hidden("joinId", @join.EngineerMachineId)
         <input type="submit" value="Delete"/>
@@ -30,6 +30,6 @@ else
 }
 
 <p>@Html.ActionLink("Back to list", "Index")</p>
-<p>@Html.ActionLink("Edit Engineer", "Edit", new { id = Model.EningeerId })</p>
-<p>@Html.ActionLink("Add a machine", "AddMachine", new { id = Model.MachineId })</p>
-<p>@Html.ActionLink("Delete machine", "Delete", new { id = Model.MachineId })</p>
+<p>@Html.ActionLink("Edit Engineer", "Edit", new { id = Model.EngineerId })</p>
+<p>@Html.ActionLink("Add a machine", "AddMachine", new { id = Model.EngineerId })</p>
+<p>@Html.ActionLink("Delete engineer", "Delete", new { id = Model.EngineerId })</p>
