--- a/Factory/Views/Machines/AddEngineer.cshtml
+++ b/Factory/Views/Machines/AddEngineer.cshtml
@@ -10,7 +10,7 @@
 
 @using (Html.BeginForm())
 {
-    @Html.HiddenFor(model => model.EngineerId)
+    @Html.HiddenFor(model => model.MachineId)
 
     @Html.Label("Select engineer")
     @Html.DropDownList("EngineerId")
