fix typos and add css folder

--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 
-<h1>Engingeers</h1>
+<h1>Engineers</h1>
 <h4><a href='/engineers/new'>Add a new engineer profile!</a></h4>
 
 @using Factory.Models
