--- a/Factory/Views/Engineers/Create.cshtml
+++ b/Factory/Views/Engineers/Create.cshtml
@@ -11,6 +11,7 @@
   @Html.LabelFor(model => model.Description)
   @Html.TextBoxFor(model => model.Description)
 
-  <input type="submit" value="Add new item" class="btn btn-default" />
+  <input type="submit" value="Add new engineer" class="btn" />
 }
-<p>@Html.ActionLink("Show all eningeers", "Index")</p>
+<br>
+<p>@Html.ActionLink("Show all engineers", "Index")</p>
