--- a/Factory/wwwroot/css/styles.css
+++ b/Factory/wwwroot/css/styles.css
@@ -37,3 +37,24 @@ a {
 a:hover {
   color: rgb(89, 129, 136);
 }
+
+ul {
+  list-style: inside;
+}
+
+li {
+  margin-bottom: 20px;
+}
+
+.btn {
+  color: whitesmoke;
+  font-weight: 400;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 8px;
+  border: 2px solid white;
+  border-radius: 5px;
+  font-size: 1rem;
+  font-family: "Helvetica Neue";
+  letter-spacing: 0.05em;
+  border-color: rgb(150, 150, 150);
+}
